<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="240dp"
        android:src="@drawable/app_ic"
        android:contentDescription="@string/logo_desc" />

    <TextView
        android:id="@+id/instagramText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Instagram_text"
        android:textSize="30sp"
        android:textColor="@android:color/darker_gray"
        android:layout_below="@id/logoImage"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:fontFamily="@font/aisha_script" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/fromText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_text"
            android:textSize="26sp"
            android:textColor="#AAB8C2" />

        <TextView
            android:id="@+id/metaText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meta_text"
            android:textSize="37sp"
            android:textColor="#D62976"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>
