<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <!-- Scrollable content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footer">

        <!-- Main content container -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Header -->
            <LinearLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@android:color/white">

                <ImageView
                    android:id="@+id/headerLike"
                    android:layout_width="match_parent"
                    android:layout_height="198dp"
                    android:contentDescription="@string/heart"
                    android:scaleType="centerCrop"
                    android:src="@drawable/header_logo" />
            </LinearLayout>

            <!-- First Post Section -->
            <LinearLayout
                android:id="@+id/userProfileSection1"
                android:layout_width="190dp"
                android:layout_height="66dp"
                android:layout_marginTop="11dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/userProfilePic1"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/circle_background"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile_image" />

                <TextView
                    android:id="@+id/userName1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:text="Its_My_Planet"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/postSection1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/postImage1"
                    android:layout_width="match_parent"
                    android:layout_height="276dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/post" />

                <LinearLayout
                    android:id="@+id/postActions1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/commentIcon1"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/comment"
                        android:src="@drawable/comment" />

                    <ImageView
                        android:id="@+id/likeIcon1"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="10dp"
                        android:contentDescription="@string/heart"
                        android:src="@drawable/heart" />

                    <ImageView
                        android:id="@+id/shareIcon1"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="10dp"
                        android:contentDescription="@string/share"
                        android:src="@drawable/send_icon" />
                </LinearLayout>

                <TextView
                    android:id="@+id/postDescription1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="This is the description of the post." />

                <TextView
                    android:id="@+id/likeCount1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="100 likes" />
            </LinearLayout>

            <!-- Second Post Section -->
            <LinearLayout
                android:id="@+id/userProfileSection2"
                android:layout_width="190dp"
                android:layout_height="66dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/userProfilePic2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/circle_background"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile_image" />

                <TextView
                    android:id="@+id/userName2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:text="User_TwFood Blog"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/postSection2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/postImage2"
                    android:layout_width="match_parent"
                    android:layout_height="276dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/food" />

                <LinearLayout
                    android:id="@+id/postActions2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/commentIcon2"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/comment"
                        android:src="@drawable/comment" />

                    <ImageView
                        android:id="@+id/likeIcon2"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="10dp"
                        android:contentDescription="@string/heart"
                        android:src="@drawable/heart" />

                    <ImageView
                        android:id="@+id/shareIcon2"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="10dp"
                        android:contentDescription="@string/share"
                        android:src="@drawable/send_icon" />
                </LinearLayout>

                <TextView
                    android:id="@+id/postDescription2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="Colours of food ." />

                <TextView
                    android:id="@+id/likeCount2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="200 likes" />
            </LinearLayout>
            <!-- Third Post Section -->
            <LinearLayout
                android:id="@+id/userProfileSection3"
                android:layout_width="190dp"
                android:layout_height="66dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/userProfilePic3"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/circle_background"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile_image" />

                <TextView
                    android:id="@+id/userName3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:text="Another_User"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/postSection3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/postImage3"
                    android:layout_width="match_parent"
                    android:layout_height="276dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/travel" />

                <LinearLayout
                    android:id="@+id/postActions3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/commentIcon3"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/comment"
                        android:src="@drawable/comment" />

                    <ImageView
                        android:id="@+id/likeIcon3"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="10dp"
                        android:contentDescription="@string/heart"
                        android:src="@drawable/heart" />

                    <ImageView
                        android:id="@+id/shareIcon3"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="10dp"
                        android:contentDescription="@string/share"
                        android:src="@drawable/send_icon" />
                </LinearLayout>

                <TextView
                    android:id="@+id/postDescription3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="Another post description here." />

                <TextView
                    android:id="@+id/likeCount3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="300 likes" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <!-- Footer Section -->
    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/homeIcon"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:src="@drawable/home"
            android:contentDescription="@string/home_icon" />

        <ImageView
            android:id="@+id/searchIcon"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:src="@drawable/search"
            android:contentDescription="@string/search_icon" />

        <ImageView
            android:id="@+id/reelIcon"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:src="@drawable/reel_logo"
            android:contentDescription="@string/reel_icon" />

        <ImageView
            android:id="@+id/profileIcon"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:src="@drawable/profile_icon"
            android:contentDescription="@string/profile_icon" />
    </LinearLayout>

</RelativeLayout>
